Alteração do titulo de 2 telas

--- a/www/index.html
+++ b/www/index.html
@@ -237,7 +237,7 @@
     </script>
 
     <script id="meuscartoes" type="text/ng-template">
-      <ion-view view-title="Papudinho" ng-controller="MeusCartoes">
+      <ion-view view-title="Meus Cartões" ng-controller="MeusCartoes">
         <ion-nav-buttons side="right">
           <a href="#/addCartao" class="button button-icon icon ion-plus"></a>
         </ion-nav-buttons>
@@ -260,7 +260,7 @@
     </script>
 
     <script id="cartao" type="text/ng-template">
-      <ion-view view-title="Papudinho" ng-controller="Cartao">
+      <ion-view view-title="Histórico" ng-controller="Cartao">
 
       <ion-nav-bar class="bar-royal" ng-controller="Back">
         <ion-nav-buttons side="left">
