alteração de titulo

--- a/www/index.html
+++ b/www/index.html
@@ -306,7 +306,7 @@
     </script>
 
     <script id="cartaodetalhe" type="text/ng-template">
-      <ion-view view-title="Papudinho" ng-controller="CartaoDetalhe">
+      <ion-view view-title="Detalhe" ng-controller="CartaoDetalhe">
 
       <ion-nav-bar class="bar-royal" ng-controller="Back">
         <ion-nav-buttons side="left">
