--- a/www/index.html
+++ b/www/index.html
@@ -689,11 +689,11 @@
             <div class="row">
               <div class='col'>
                 <img ng-src="{{imgDrink}}" width="100%" ng-click="openModal(1)">
-                <button ng-click="capturePhoto(1)" class="button button-block button-positive">Tirar Foto da Bebida</button>
+                <button ng-click="capturePhoto(1)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto da Bebida</button>
               </div>
               <div class="col">
                 <img ng-src="{{imgCard}}" width="100%" ng-click="openModal(2)">
-                <button ng-click="capturePhoto(2)" class="button button-block button-positive">Tirar Foto do Cartão</button>
+                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Cartão</button>
               </div>
             </div>
 
@@ -767,11 +767,11 @@
             <div class="row">
               <div class='col'>
                 <img ng-src="{{imgDrink}}" width="100%" ng-click="openModal(1)">
-                <button ng-click="capturePhoto(1)" class="button button-block button-positive">Tirar Foto da Bebida</button>
+                <button ng-click="capturePhoto(1)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto da Bebida</button>
               </div>
               <div class="col">
                 <img ng-src="{{imgCard}}" width="100%" ng-click="openModal(2)">
-                <button ng-click="capturePhoto(2)" class="button button-block button-positive">Tirar Foto do Cartão</button>
+                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Cartão</button>
               </div>
             </div> 
 
