correção dos botões fixos

--- a/www/index.html
+++ b/www/index.html
@@ -697,11 +697,12 @@
               </div>
             </div>
             <br/><br/>
+            
           </form>
         </ion-content>
-          <div class="bar bar-footer" ng-click="openModal()">
+          <div class="bar bar-footer" ng-click="submitcartao()">
             <div class="title">
-            <input type="submit" value="Salvar" ng-click="submitcartao()" class="button button-event button-block" enctype="multipart/form-data" />
+              <input type="submit" value="Salvar" class="button button-event button-block" />
             </div>
           </div>
       </ion-view>
@@ -780,7 +781,7 @@
             <br/><br/>
           </form>
         </ion-content>
-        <div class="bar bar-footer" ng-click="openModal()">
+        <div class="bar bar-footer">
           <div class="title">
             <input type="submit" value="Salvar" ng-click="submitcartao()" class="button button-event button-block" enctype="multipart/form-data" />
           </div>
