--- a/www/index.html
+++ b/www/index.html
@@ -701,14 +701,9 @@
               </div>
             </div>
             <br/><br/>
-            
+            <input type="submit" value="Salvar" class="button button-event button-block" />
           </form>
         </ion-content>
-          <div class="bar bar-footer" ng-click="submitcartao()">
-            <div class="title">
-              <input type="submit" value="Salvar" class="button button-event button-block" />
-            </div>
-          </div>
       </ion-view>
     </script>
 
@@ -783,13 +778,9 @@
               </div>
             </div>
             <br/><br/>
+            <input type="submit" value="Salvar" ng-click="submitcartao()" class="button button-event button-block"/>
           </form>
         </ion-content>
-        <div class="bar bar-footer">
-          <div class="title">
-            <input type="submit" value="Salvar" ng-click="submitcartao()" class="button button-event button-block" enctype="multipart/form-data" />
-          </div>
-        </div>
       </ion-view>
     </script>
 
