--- a/www/index.html
+++ b/www/index.html
@@ -286,7 +286,7 @@
     </script>
 
     <script id="meuscartoes" type="text/ng-template">
-      <ion-view view-title="Meus Cartões" ng-controller="MeusCartoes">
+      <ion-view view-title="Meus Cartões" ng-controller="MeusCartoes" data-ng-init="init()">
         <ion-nav-buttons side="right">
           <a href="#/addCartao" class="button button-icon icon ion-plus"></a>
         </ion-nav-buttons>
@@ -303,7 +303,7 @@
                     Bebida: {{ cartao.drink }}<br>
                     Bar: {{ cartao.bar }}<br>
                     Doses restantes: {{ cartao.remaining_doses}}/{{cartao.total_doses }}<br>
-                    Vencimento: {{ cartao.due_date }}
+                    Vencimento: {{ cartao.due_date | date:'dd/MM/yyyy'}}
                   </div>
                 </div>
               </a>
@@ -338,7 +338,8 @@
                     Bebida: {{ drink }} <br>
                     Bar:  {{ bar }}<br>
                     Doses restantes: {{ cartao.remaining_doses}}/{{total_doses }} <br>
-                    Vencimento: {{ vencimento }} <br>
+                    Vencimento: {{ vencimento | date:'dd/MM/yyyy' }} <br>
+
                   </div>
                 </div>
               </a>
@@ -372,7 +373,8 @@
                 Bebida: {{ drink }} <br>
                 Bar:  {{ bar }}<br>
                 Doses restantes: {{ detalhe.remaining_doses}}/{{total_doses }} <br>
-                Vencimento: {{ vencimento }} <br>
+                Vencimento: {{ vencimento | date:'dd/MM/yyyy' }} <br>
+                Atualizado em: {{detalhe.updated_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
                 Criado: {{detalhe.created_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
                 <div class="row">
                   <div class="col">
@@ -595,16 +597,17 @@
             <div class="list">
               <div align="center" class="msg" id="msgcartoes">{{msg}}</div>
               <div ng-repeat="module in Cartoes">
-                <div class="item " ng-hide="module.card_secret">
+                <div class="item " ng-hide="module.card_secret" ng-click='viewCartao(module.id)'>
                   <div class="row">
                     <div class="col"><img ng-src = "{{module.historics[module.historics.length-1].image_drink.url}}" width="100%"></div>
                     <div class="col col-75">
                       Bar:  {{ module.bar }}<br>
                       Bebida: {{ module.drink }} <br>
                       Doses restantes: {{ module.remaining_doses}}/{{module.total_doses }} <br>
-                      Vencimento: {{ module.due_date }} <br>
+                      Vencimento: {{ module.due_date | date:'dd/MM/yyyy'}} <br>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -626,7 +629,7 @@
                 <h3>{{module.title}}</h3>
                 <img class="full-image" src="{{module.avatar.avatar.url}}">
                 <p>{{module.description}}<br>
-                  Válido até {{module.date.replace("-", "/").replace("-", "/")}}</p>
+                  Válido até {{module.date | date:'dd/MM/yyyy'}}</p>
               </div>
             </div>
           </ion-content>
