--- a/www/index.html
+++ b/www/index.html
@@ -631,6 +631,9 @@
             <div class=" card">
             <div align="center" class="msg" id="msgpromocoes">{{msg}}</div>
               <div class="item item-text-wrap" ng-repeat="module in Promocoes | filter:FiltroTags">
+                
+                <div id="{{module.id}}"></div>
+
                 <h2 align="center">{{module.bar_name}}</h2>
                 <h3>{{module.title}}</h3>
                 <img class="full-image" src="{{module.avatar.avatar.url}}">
